...
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_report_options"/>

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/see_say_text_police"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="12dp"
                android:gravity="start|center_vertical"
                android:textSize="16sp"
                android:text="@string/text_report_via_text"/>

            <TextView
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/see_say_call_police"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:textSize="16sp"
                android:text="@string/text_report_via_call"/>

...
