<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort"
        android:visible="false"
        android:icon="@drawable/ic_sort_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_breeze_balance"
        android:title="@string/menu_breeze_balance"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_report"
        android:title="@string/menu_report_incident"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_feedback"
        android:title="@string/menu_feedback"
        app:showAsAction="never"/>
</menu>