<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        style="@style/BusLabelTextStyle"
        android:id="@+id/route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="18sp"
        android:padding="6dp"
        tools:text="125"/>

    <TextView
        style="@style/RouteTitleTextStyle"
        android:id="@+id/route_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/route_name"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:maxLines="2"
        android:textSize="20sp"
        tools:text="Clackamas Towne Center on the Intersection of 6th and main"/>

    <TextView
        style="@style/RouteSubtitleTextStyle"
        android:id="@+id/route_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/route_destination"
        android:textSize="14sp"
        tools:text="Northwest"/>

    <TextView
        style="@style/RouteLabelTextStyle"
        android:id="@+id/route_time_until_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/route_destination"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        tools:text="12 mins"/>

    <TextView
        android:id="@+id/route_vehicle_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/route_direction"
        tools:text="Vehicle ID: 1452"/>
</RelativeLayout>