<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bus_details_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:listitem="@layout/element_bus_route_detail"/>