<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favorite_route_row_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">

    <TextView
        style="@style/RouteLabelTextStyle"
        android:id="@+id/route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        android:background="@drawable/shape_round_rect_orange"
        android:textColor="@color/md_white_1000"
        tools:text="Route 5"/>

    <TextView
        style="@style/RouteSubtitleTextStyle"
        android:id="@+id/route_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/route_name"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        tools:text="Southwest"/>

    <TextView
        style="@style/RouteTitleTextStyle"
        android:id="@+id/route_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        tools:text="Buckhead and Duckface"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/route_name"
        android:layout_toStartOf="@+id/favorite_button"/>

    <TextView
        style="@style/RouteLabelTextStyle"
        android:id="@+id/route_time_until_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/route_destination"
        android:layout_toEndOf="@id/route_direction"
        android:layout_alignBaseline="@id/route_direction"
        tools:text="3 minutes early"/>

    <ImageView
        style="@style/FavoriteButtonStyle"
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:contentDescription="@null"
        android:ellipsize="end"/>

</RelativeLayout>