<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical">

    <TextView
        style="@style/TrainLabelTextStyle"
        android:id="@+id/route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:backgroundTint="@color/md_blue_500"
        tools:text="BLUE"/>

    <TextView
        style="@style/RouteTitleTextStyle"
        android:id="@+id/route_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/route_name"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:lines="2"
        android:textSize="18sp"
        tools:text="Clackamas Town Center Town Hall"/>

    <TextView
        style="@style/RouteSubtitleTextStyle"
        android:id="@+id/direction_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/route_destination"
        android:layout_marginTop="8dp"
        tools:text="Southwest"/>

    <TextView
        style="@style/RouteLabelTextStyle"
        android:id="@+id/time_til_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/route_destination"
        android:layout_marginTop="4dp"
        android:layout_alignParentEnd="true"
        tools:text="5 minutes"/>

    <TextView
        android:id="@+id/train_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/direction_text_view"
        tools:text="Vehicle ID: 7456"/>

    <TextView
        android:id="@+id/arrival_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_til_text_view"
        android:layout_alignParentEnd="true"
        tools:text="\@ 12:58 AM"/>
</RelativeLayout>