<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/no_trains_running_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no_trains_running"
            android:textColor="@color/md_grey_700"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trains_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/element_train_route"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <include
        layout="@layout/element_loading_item"
        android:id="@+id/loading_train_routes_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</FrameLayout>
